# orgnz

./: .env.example  .gitignore  README.md  app.json  package-lock.json  package.json  tsconfig.json
app/: _layout.tsx  add-task.tsx  day-review.tsx  login.tsx  reset-password.tsx
app/(tabs)/: _layout.tsx  classes.tsx  index.tsx  past.tsx  performance.tsx  settings.tsx
app/class/: [id].tsx
app/task/: [id].tsx
components/: DeliverableUploader.tsx  animations.tsx  charts.tsx  ui.tsx
lib/: analytics.ts  data.ts  desktopNotify.ts  fuzzy.ts  haptics.ts  notion.ts  schedule.ts  supabase.ts  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
supabase/functions/morning-digest/: index.ts
supabase/functions/notion-oauth-callback/: index.ts
supabase/functions/notion-sync/: index.ts
supabase/migrations/: 0001_init.sql  0002_storage.sql  0003_fuzzy_search.sql  0004_category_notion_db.sql
