[package]
name = "orgnz"
version = "0.1.0"
description = "orgnz — college planner, desktop shell"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "orgnz_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
